fixing double-scrollbar bug in spreadsheet tool

--- a/shared/style/custard.css
+++ b/shared/style/custard.css
@@ -177,18 +177,21 @@ body.tool #content {
 }
 
 body.tool #content p.loading {
-  margin-top: 200px;
-  text-align: center;
-  padding-top: 50px;
-  background: transparent url('/image/tool-loader.gif') center top no-repeat;
-  color: #666;
-  font-size: 20px;
+    margin-top: 200px;
+    text-align: center;
+    padding-top: 50px;
+    background: transparent url('/image/tool-loader.gif') center top no-repeat;
+    color: #666;
+    font-size: 20px;
 }
 
 #content iframe {
-  border: none;
-  width: 100%;
-  height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
 }
 
 .metro-tile.highrise {
